# crates-io-compression-bench

./: Cargo.toml
src/: main.rs
