[package]
name = "crates-io-compression-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-compression = { version = "0.4.3", features = ["brotli", "gzip", "lzma", "tokio", "zlib", "zstdmt", "bzip2", "xz"] }
async-tempfile = "0.4.0"
bytes = "1.5.0"
camino = "1.1.6"
futures = "0.3.28"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
reqwest = { version = "0.11.20", default-features = false, features = ["rustls", "stream", "json", "default-tls"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-indicatif = "0.3.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
